<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/search_page">

        <TextView
            android:id="@+id/foodNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/food_name_label"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/page_title" />

        <EditText
            android:id="@+id/foodNameInput"
            android:layout_width="287dp"
            android:layout_height="49dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="33dp"
            android:background="@drawable/text_input_border"
            android:ems="10"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodNameLabel" />

        <Button
            android:id="@+id/searchFoodBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#68EA16"
            android:text="@string/search_btn_txt"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="12sp"
            app:cornerRadius="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foodNameInput" />

        <Button
            android:id="@+id/addConsumedFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#68EA16"
            android:padding="5dp"
            android:text="@string/add_consumed_food"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="12sp"
            app:cornerRadius="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fatsToday" />

        <Button
            android:id="@+id/searchFromGallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="78dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#90AEEF"
            android:padding="5dp"
            android:text="@string/search_saved_photo"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="12sp"
            app:cornerRadius="10dp"
            app:layout_constraintStart_toEndOf="@+id/searchFromCamera"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/searchFromCamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="#90AEEF"
            android:padding="5dp"
            android:text="@string/from_camera"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="12sp"
            app:cornerRadius="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/editConsumedFoodsBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#F76162"
            android:padding="5dp"
            android:text="@string/edit_consumed_foods"
            android:textAllCaps="false"
            android:textColor="#000000"
            android:textSize="12sp"
            app:cornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fatsToday" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/nutritional_info_title"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchFromGallery" />

        <TextView
            android:id="@+id/carbsToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/text_input_small_border"
            android:ems="10"
            android:hint="@string/carbohydrates"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/caloriesToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/text_input_small_border"
            android:ems="10"
            android:hint="@string/calories"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carbsToday" />

        <TextView
            android:id="@+id/proteinsToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/text_input_small_border"
            android:ems="10"
            android:hint="@string/proteins"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/caloriesToday" />

        <TextView
            android:id="@+id/fatsToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/text_input_small_border"
            android:ems="10"
            android:hint="@string/fats"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/proteinsToday" />

        <TextView
            android:id="@+id/page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/inputVoiceBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:background="@drawable/mic_background"
            android:backgroundTint="#6EEFFF"
            android:padding="10dp"
            android:src="@drawable/ic_mic"
            app:layout_constraintBottom_toBottomOf="@+id/foodNameInput"
            app:layout_constraintEnd_toEndOf="@+id/foodNameInput"
            app:layout_constraintTop_toTopOf="@+id/foodNameInput"
            android:contentDescription="TODO" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:text="@string/search_by_img_btn"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchFoodBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>