<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mealsRVCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="4dp"
    android:layout_marginRight="0dp"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mealDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="monospace"
            android:text="11/2/2020"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:text="@string/carbohydrates"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/calories"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="292dp"
            android:text="@string/proteins"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="208dp"
            android:text="@string/fats"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="10sp"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/editMealInfo"
            android:layout_width="45dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="#00FFFFFF"
            app:backgroundTint="#00FFFFFF"
            app:icon="@android:drawable/ic_menu_delete"
            app:iconSize="30dp"
            app:iconTint="@color/dark_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/carbsTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintStart_toEndOf="@+id/textView23" />

        <TextView
            android:id="@+id/mealsTaken"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="49dp"
            android:text="TextView"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fatsTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintStart_toEndOf="@+id/textView5" />

        <TextView
            android:id="@+id/proteinsTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintStart_toEndOf="@+id/textView24" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/meal_taken"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealDate" />

        <TextView
            android:id="@+id/caloriesTaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/divider2"
            app:layout_constraintStart_toEndOf="@+id/textView29" />

        <View
            android:id="@+id/divider2"
            android:layout_width="404dp"
            android:layout_height="34dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="404dp"
            android:layout_height="20dp"
            app:layout_constraintBottom_toTopOf="@+id/carbsTaken"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mealsTaken" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>